Kubernetes/deployment-mssql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      securityContext:
        fsGroup: 10001  # GID del grupo "mssql"
      containers:
        - name: sqlserver
          image: mdiceprojects/sqlserver:latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: data-volume
              mountPath: /var/opt/mssql
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
