Kubernetes/service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    annotations:
      service.beta.kubernetes.io/azure-load-balancer-resource-group: MC_apiexport_apiexport-cluster_eastus
    name: sqlserver-service
  spec:
    selector:
      app: sqlserver
    ports:
      - protocol: TCP
        port: 1433
        targetPort: 1433
    type: LoadBalancer
